# todos_rust

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/hot_or_not_assignment_backend/: Cargo.toml  hot_or_not_assignment_backend.did
src/hot_or_not_assignment_backend/src/: lib.rs  lib_with_error_handling.rs  test.rs
src/hot_or_not_assignment_frontend/src/: index.html  index.js
